# Project_blog

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
db/migrations/: env.py
db/migrations/versions/: 09a64bf9b2ea_add_phase1_collection_state.py  34908a499f15_initial_schema.py  61d7f83f5c0e_add_phase2_llm_and_outbox_status.py
docker/: Dockerfile  compose.yml
docs/: alembic_runbook.md  license_audit.md  risk_register.md  schema_governance.md  work_log.md
instructions/: error_log.md  eval_framework.md  folder_structure.md  phase_0_foundation.md  phase_1_collection.md  phase_2_llm_notion.md  phase_3_stabilization.md  phase_4_extension.md  risk_logging.md  tech_stack.md
scripts/: check_layout.py  lint_ddl.py  lint_env.py  report_fetch_health.py  verify_schema.py
sources/: anthropic_news.yaml  github_releases_llm.yaml  openai_blog.yaml
src/: cli.py  collection.py  config.py  db.py  dedupe.py  drafting.py  fetchers.py  logging_utils.py  metrics.py  models.py  notion_projection.py  prompting.py  reporting.py  source_registry.py  storage.py  url_utils.py
src/extract/: __init__.py  service.py
src/llm/: __init__.py  ollama_client.py
src/prompts/: cluster_description_v1.txt  draft_v1.txt  summary_v1.txt  tags_v1.txt
src/workers/: __init__.py  outbox_dispatcher.py
tests/: test_collection_service.py  test_dedupe.py  test_drafting.py  test_extract_service.py  test_fetchers.py  test_lint_ddl.py  test_lint_env.py  test_ollama_client.py  test_outbox_dispatcher.py  test_phase0_source_policy.py  test_prompting.py  test_reporting.py  test_source_registry.py  test_storage.py  test_url_utils.py
